// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_CAPACITY_RHSM 1`] = `
{
  "result": {
    "capacity": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "legend": {},
    "tally": {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "capacity": {},
    "legend": {},
    "tally": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_CAPACITY_RHSM 1`] = `
{
  "result": {
    "capacity": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "legend": {},
    "tally": {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "capacity": {},
    "legend": {},
    "tally": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_CAPACITY_RHSM 1`] = `
{
  "result": {
    "capacity": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "legend": {},
    "tally": {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "capacity": {},
    "legend": {},
    "tally": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle specific defined types: defined type SET_GRAPH_LEGEND 1`] = `
{
  "result": {
    "capacity": {},
    "legend": {
      "lorem": true,
    },
    "tally": {},
  },
  "type": "SET_GRAPH_LEGEND",
}
`;
